# premiere-back/src/main/java/org/hcmus/premiere/controller/TransactionController.java
@@ -2,6 +2,8 @@ package org.hcmus.premiere.controller;
 
 import static org.hcmus.premiere.common.consts.PremiereApiUrls.PREMIERE_API_V1;
 
+import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -17,7 +19,10 @@ import org.hcmus.premiere.model.dto.TransferMoneyRequestDto;
 import org.hcmus.premiere.service.CheckingTransactionService;
 import org.hcmus.premiere.service.TransactionService;
 import org.hcmus.premiere.service.ValidationService;
+import org.springframework.format.annotation.DateTimeFormat;
+import org.springframework.format.annotation.DateTimeFormat.ISO;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -35,6 +40,18 @@ public class TransactionController extends AbstractApplicationController{
   private CheckingTransactionService checkingTransactionService;
 
   private ValidationService validationService;
+
+  @GetMapping("/total-amount/{fromDate}/{toDate}")
+  public List<BigDecimal> getTotalAmountInRangeOfDate(
+      @PathVariable @DateTimeFormat(iso = ISO.DATE) LocalDate fromDate,
+      @PathVariable @DateTimeFormat(iso = ISO.DATE) LocalDate toDate) {
+    return transactionService.getTotalAmountInRangeOfDate(fromDate, toDate);
+  }
+
+  @GetMapping("/total-amount-of-all-time")
+  public BigDecimal getTotalAmount() {
+    return transactionService.getTotalAmount();
+  }
 
   @PostMapping("/money-transfer/validate")
   public ResponseEntity<?> validateTransferMoney(@RequestBody @Valid TransactionRequestDto transactionRequestDto) {
@@ -71,7 +88,9 @@ public class TransactionController extends AbstractApplicationController{
             criteriaDto.getTransactionType(),
             criteriaDto.getMoneyTransferCriteria(),
             criteriaDto.isAsc(),
-            userId
+            userId,
+            criteriaDto.getFromDate(),
+            criteriaDto.getToDate()
         )
         .stream()
         .map(transactionMapper::toDto)
@@ -79,13 +98,44 @@ public class TransactionController extends AbstractApplicationController{
 
     PremierePaginationResponseDto<TransactionDto> res = applicationMapper.toDto(transactionDtos, criteriaDto);
     res.getMeta().getPagination().setTotalPages(
-        transactionService.getTotalPages(criteriaDto.getTransactionType(), criteriaDto.getMoneyTransferCriteria(), userId,
-            criteriaDto.getSize()));
-    res.getMeta().getPagination().setTotalElements(transactionService.getTotalElements(
-        criteriaDto.getTransactionType(),
-        criteriaDto.getMoneyTransferCriteria(),
-        userId));
+        transactionService.getTotalPages(
+            criteriaDto.getTransactionType(),
+            criteriaDto.getMoneyTransferCriteria(),
+            userId,
+            criteriaDto.getSize(),
+            criteriaDto.getFromDate(),
+            criteriaDto.getToDate()));
+    res.getMeta().getPagination().setTotalElements(
+        transactionService.getTotalElements(
+            criteriaDto.getTransactionType(),
+            criteriaDto.getMoneyTransferCriteria(),
+            userId,
+            criteriaDto.getFromDate(),
+            criteriaDto.getToDate()));
 
+    return res;
+  }
+
+  @PostMapping("/{bankId}/get-transactions/{fromDate}/{toDate}")
+  public PremierePaginationResponseDto<TransactionDto> getTransactionsInRangeOfDate(
+      @PathVariable Long bankId,
+      @PathVariable @DateTimeFormat(iso = ISO.DATE) LocalDate fromDate,
+      @PathVariable @DateTimeFormat(iso = ISO.DATE) LocalDate toDate,
+      @Valid @RequestBody TransactionCriteriaDto criteriaDto) {
+    List<TransactionDto> transactionDtos = transactionService
+        .getTransactionsByBankIdAndInRangeOfDate(
+            criteriaDto.getPage(),
+            criteriaDto.getSize(),
+            bankId,
+            fromDate,
+            toDate)
+        .stream()
+        .map(transactionMapper::toDto)
+        .toList();
+
+    PremierePaginationResponseDto<TransactionDto> res = applicationMapper.toDto(transactionDtos, criteriaDto);
+    res.getMeta().getPagination().setTotalPages(transactionService.getTotalPages(criteriaDto.getSize()));
+    res.getMeta().getPagination().setTotalElements(transactionService.count());
     return res;
   }
 }
